@startuml
abstract Observable{

}

interface Observer{
+ update(o : Observable, arg : Object)
}

abstract Item{
# name : String
# initTime : LocalDateTime
# endTime : LocalDateTime
# totalTIme : Duration
# active : boolean
# father : Project
# {abstract} getDurationBetween(ini : LocalDateTime, end : LocalDateTime) : Duration
+ {abstract} getTotalTime() : Duration
+ updateEnd(end : LocalDateTime)
+ updateIni(ini : LocalDateTime)
+ updateTotalTime(d : Duration)
+ {abstract} acceptVisitor(v : Visitor)
}


class Project{
+ Project(name : String)
+ Project(name : String, father : Project)
# getDurationBetween(ini : LocalDateTime, end : LocalDateTime) : Duration
+ addTask(task : Task)
+ getTotalTime() : Duration
+ acceptVisitor(v : Visitor)
}

class Task{
+ startWorking()
+ stopWorking()
# getDurationBetween(ini : LocalDateTime, end : LocalDateTime) : Duration
+ getTotalTime() : Duration
+ acceptVisitor(v : Visitor)
+ addInterval(i : Interval)
+ getLastInterval() : Interval
}

class Interval{
- initTime : LocalDateTime
- endTime : LocalDateTime
- clock : ClockTimer
- duration : Duration
+ stopInterval()
+ getInterval() : Duration
+ update(o : Observable, arg : Object)
+ acceptVisitor(v : Visitor)
+ updateEnd(end : LocalDateTime)
+ updateIni(ini : LocalDateTime)
}

class ClockTimer{
- timer : Timer
- dateTime : LocalDateTime
- {static} instance : ClockTimer
- {static} periode : int
+ {static} getInstance() : ClockTimer
+ start()
+ stop()
}

interface Visitor{
+ visitTask(t : Task);
+ visitInterval(i : Interval);
+ visitProject(p : Project);
}

class Printer{
- clock : ClockTimer
- root : Project
+ Printer(root : Project)
+ visitTask(t : Task)
+ visitInterval(i : Interval)
+ visitProject(p : Project)
+ update(o : Observable, arg : Object)
}

class Json{
- root : Project
- file : File
- jsonString : String
+ saveRoot(i : Item)
+ jsonator(i : Interval,jsonArray : JSONArray)
+ jsonator(t : Task,jsonArray : JSONArray)
+ jsonator(p : Project,jsonArray : JSONArray)
+ visitTask(t : Task)
+ visitInterval(i : Interval)
+ visitProject(p : Project)
}

class File{
- path : String
+ readJson() : Project
- recorrerJsonArrayItem(arr : JSONArray, father : Project)
- recorrerJsonArrayInterval(arr : JSONArray, father : Task)
+ createProject(json : JSONObject, father : Project)
+ createTask(json : JSONObject, father : Project
+ createInterval(json : JSONObject, father : Task)
+ writeJSONFile(json : JSONObject)
}

class PrintTree{
- clock : ClockTimer
- root : Project
+ PrintTree(root : Project)
+ visitTask(t : Task)
+ visitInterval(i : Interval)
+ visitProject(p : Project)
}

Item <|--- Project
Item <|--- Task
Item "*"<---*"1" Project : items
Interval "*"<---*"1" Task : intervals
Observer <|.. Interval
Observable <|-- ClockTimer
Observer <|.. Printer
Visitor <|.. Printer
Visitor <|.. Json
File "1"<--"1" Json : file
Visitor <|.. PrinterTree
@enduml